--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,9 @@
-icewm -- authors file.  2025-05-25
+icewm -- authors file.  2025-06-22
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
 Author: Саша Петровић <salepetronije@gmail.com>
+Author: Eduard Bloch <blade@debian.org>
+Author: Jure Repinc <jlp@holodeck1.com>
 Author: Feike Donia <feikedonia@proton.me>
 Author: David Medina <medipas@gmail.com>
 Author: Gemineo <vistatec@gemineo.de>
@@ -12,7 +14,6 @@ Author: Davide Aiello <davide.aiello@novilingulists.com>
 Author: Emily Dong <Emily.Dong@excel-gits.com>
 Author: Grace Yu <grace.yu@excel-gits.com>
 Author: Dmitriy Khanzhin <jinn@altlinux.org>
-Author: Eduard Bloch <blade@debian.org>
 Author: Mehmet Akif 9oglu <madanadam@gmail.com>
 Author: Temuri Doghonadze <temuri.doghonadze@gmail.com>
 Author: Marina J. Donis <marinajdonis@gmail.com>
